--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,17 +1,18 @@
 
 
-<main *ngIf="route.url === '/'" class="hero min-h-screen bg-base-200">
-  <section class="hero-content text-center">
-    <h1 class="font-bold">Contact List</h1>
-    <!-- Resources -->
-    <h2>
-      This is the contact list application, thanks for using this.
-      click on the link below to continue to the app
-    </h2>
-    <a class="btn btn-primary" routerLink="/people" routerLinkActive="active"  >People</a>
-  </section>
 
-</main>
+  <main *ngIf="route.url === '/'" class="hero min-h-screen bg-base-200">
+    <div class="hero-content text-center">
+      <div class="max-w-md">
+        <h1 class="text-5xl font-bold">Hi there! 👾</h1>
+
+        <p class="py-6">This is the frontend of my Contracts App 📲.</p>
+        <p class="pb-6">I hope you enjoy it...</p>
+        <a href="/people" class="btn btn-primary">Get Started</a>
+      </div>
+    </div>
+  </main>
+
 
 <router-outlet>
 </router-outlet>
