--- a/frontend/src/app/people/people.component.html
+++ b/frontend/src/app/people/people.component.html
@@ -29,5 +29,8 @@
       </div>
     </div>
   </section>
-  <button class="btn btn-circle btn-lg text-4xl btn-primary fixed bottom-10 left-10">+</button>
+  <div class="tooltip tooltip-right tooltip-primary fixed bottom-10 left-10" data-tip="Add Person">
+    <button class="btn btn-circle btn-lg text-4xl btn-primary ">+</button>
+  </div>
+
 </main>
