--- a/frontend/src/app/people/people.component.html
+++ b/frontend/src/app/people/people.component.html
@@ -1,33 +1,13 @@
 <main class="container min-h-screen min-w-full flex flex-col items-center p-8 bg-base-300">
   <h1 class="text-5xl font-bold">People List</h1>
 
-  <section class="py-10 px-5 flex flex-row justify-center flex-wrap gap-8">
-    <div class="indicator" *ngFor="let person of peopleService.people">
-      <!-- Indicator Delete Button -->
-      <span class="indicator-item">
-        <button (click)="peopleService.deletePerson(person.id)" class="btn btn-circle btn-sm btn-error">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path
-          stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
-        </button>
-      </span>
-      <!-- Card -->
-      <div class="card w-96 bg-base-100 shadow-xl">
-        <div class="card-body">
-          <div class="avatar placeholder">
-            <div class="bg-neutral-focus text-neutral-content rounded-full w-16">
-              <span class="text-2xl">{{getPersonInitials(person.name)}}</span>
-            </div>
-          </div>
-          <h3 class="card-title">{{person.name}}</h3>
-          <div class="divider">Contacts</div>
-          <!-- Contacts -->
-          <div class="mb-2" *ngFor="let contact of person.contacts">
-            <h4 class="text-md font-bold text-accent">{{contact.type.toUpperCase()}}</h4>
-            <p>{{contact.value}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
+  <section class="py-10 px-5 ">
+    <ul class="flex flex-row justify-center flex-wrap gap-8">
+      <li *ngFor="let person2 of people">
+        <app-person-card (onDelete)="deletePerson($event)" [person]="person2" ></app-person-card>
+      </li>
+    </ul>
+
   </section>
   <div class="tooltip tooltip-right tooltip-primary fixed bottom-10 left-10" data-tip="Add Person">
     <label for="add-user-modal" class="btn btn-circle btn-lg text-4xl btn-primary modal-button">+</label>
