add person form

--- a/frontend/src/app/components/person-card/person-card.component.html
+++ b/frontend/src/app/components/person-card/person-card.component.html
@@ -1,11 +1,11 @@
 <div class="indicator">
   <!-- Indicator Delete Button -->
-  <span class="indicator-item">
-        <button (click)="emitDeleteEvent(person.id)" class="btn btn-circle btn-sm btn-error">
+  <span class="indicator-item ">
+        <button type="button" (click)="emitDeleteEvent(person.id)" class="btn btn-circle btn-sm btn-error">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path
           stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
         </button>
-      </span>
+  </span>
   <!-- Card -->
 
   <div class="card w-96 bg-base-100 shadow-xl">
