--- a/frontend/src/app/components/person-card/person-card.component.html
+++ b/frontend/src/app/components/person-card/person-card.component.html
@@ -15,7 +15,32 @@
           <span class="text-2xl">{{getPersonInitials(person.name)}}</span>
         </div>
       </div>
-      <h3 class="card-title">{{person.name}}</h3>
+      <div *ngIf="personEditMode;then showForm else showTitle"></div>
+      <ng-template #showTitle>
+        <div class="flex flex-row">
+          <h3 class="card-title">{{person.name}}</h3>
+          <button type="button" (click)="togglePersonEditMode()" class="ml-3">
+            <svg class="fill-neutral-content" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" width="36px"
+                 height="36px">
+              <path
+                d="M38.406 22.234l11.36 11.36L28.784 54.576l-12.876 4.307c-1.725.577-3.367-1.065-2.791-2.79l4.307-12.876L38.406 22.234zM41.234 19.406l5.234-5.234c1.562-1.562 4.095-1.562 5.657 0l5.703 5.703c1.562 1.562 1.562 4.095 0 5.657l-5.234 5.234L41.234 19.406z"/>
+            </svg>
+          </button>
+        </div>
+      </ng-template>
+      <ng-template #showForm>
+        <div class="flex flex-row">
+          <div class="input-group">
+            <input required [formControl]="name" type="text" placeholder="Person name"
+                   class="input input-bordered w-full max-w-xs"/>
+            <button [disabled]="!name.valid" type="button" (click)="cancelEditPersonName()" class="btn btn-square">X
+            </button>
+            <button [disabled]="!name.valid" type="button" (click)="updatePersonName()" class="btn btn-square btn-primary">Save
+            </button>
+          </div>
+        </div>
+      </ng-template>
+
       <div class="divider">Contacts</div>
       <!-- Contacts -->
       <div class="mb-2" *ngFor="let contact of person.contacts">
