--- a/frontend/src/app/components/contacts-list/contacts-list.component.html
+++ b/frontend/src/app/components/contacts-list/contacts-list.component.html
@@ -1,12 +1,24 @@
 <div class="divider">Contacts</div>
-<div class="mb-2" *ngFor="let contact of contacts">
+<li class="mb-2 flex flex-row justify-between" *ngFor="let contact of contacts">
+  <div class="flex flex-col">
+
   <h4 class="text-md font-bold text-accent">{{contact.type.toUpperCase()}}</h4>
   <p>{{contact.value}}</p>
-</div>
+  </div>
+  <!--  Delete Button -->
+  <button (click)="deleteContact(contact.id)" type="button" class="btn btn-circle btn-outline btn-sm btn-error">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+         stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+    </svg>
+  </button>
 
+</li>
+
+
+<!-- Create Contact Form -->
 <div *ngIf="addContactMode;then showForm else showAddButton"></div>
 <ng-template #showAddButton>
-
   <button type="button" (click)="toggleAddContactMode()" class="btn mt-5">Add Contact</button>
 </ng-template>
 <ng-template #showForm>
